<resources>
    <string name="app_name">Pis Trader</string>
    <string name="app_name_Vn">Pis Trader</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bid_ask">BidAskActivity</string>
    <string name="tab_text_1">Mua</string>
    <string name="tab_text_2">Bán</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="txtTrc"><![CDATA[<<<]]></string>
    <string name="txtSau"><![CDATA[>>>]]></string>
    <string name="active_traderpro">Active Pis Trader</string>
    <string name="active_traderpro_Vn">Active Pis Trader</string>
    <string name="cryptoanalyst">Pis Trader</string>
    <string name="report_statistics"><![CDATA[Report & Statistics]]></string>
    <string name="report_statistics_Vn"><![CDATA[Báo cáo & Thống kê]]></string>
    <string name="about">About us</string>
    <string name="about_Vn">Về chúng tôi</string>
    <string name="lang_Vn">Ngôn ngữ</string>
    <string name="lang">Language</string>
    <string name="tviet">Tiếng Việt</string>
    <string name="tanh">English</string>Â
    <string name="sound_Vn">Âm thanh</string>
    <string name="sound">Sound</string>
    <string name="vibrate_Vn">Rung</string>
    <string name="vibrate">Vibrate</string>
    <string name="title_activity_api_trade">Trade API</string>
    <string name="title_activity_api_trade_Vn">Trade API</string>
    <string name="trade_api">Trade API</string>
    <string name="trade_api_Vn">Trade API</string>
    <string name="title_activity_vvip">VVipActivity</string>
    <string name="title_activity_vvip_Vn">VVipActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_about_Vn">AboutActivity</string>
    <string name="key_code">Key code</string>
    <string name="key_code_Vn">Key code</string>
    <string name="copy">COPY</string>
    <string name="copy_Vn">COPY</string>
    <string name="setting_Vn">Cài đặt</string>
    <string name="setting">Setting</string>

    <string name="description_donate">Donate me, if you like this app or you can donate anything to support the further development. Many Thanks !!!</string>
    <string name="description_donate_Vn">Donate tôi, nếu bạn yêu thích ứng dụng này hoặc bạn có thể góp ý thêm để hỗ trợ nhà phát triển ứng dụng cải thiện ứng dụng tốt hơn. Cảm ơn rất nhiều !!!</string>

    <string name="title_using_bot_Vn">Using bot auto (VVIP only, pm us)</string>
    <string name="title_using_bot">Using bot auto (VVIP only, pm us)</string>
    <string name="title_using_API_Vn">Using API to trade (version normal)</string>
    <string name="title_using_API">Using API to trade (version normal)</string>
    <string name="des_amount_Vn">Amount of BTC per transactions(using small amount for test)</string>
    <string name="des_amount">Amount of BTC per transactions(using small amount for test)</string>
    <string name="important_Vn">Important: Create new API key and dont use it outside of Pis Trader app</string>
    <string name="important">Important: Create new API key and dont use it outside of Pis Trader app</string>
    <string name="des_App_Vn">Pis Trader is a Crypto Signal app for Bitcoin and Altcoin. It gives you access to cryptocurrency rates, coin market cap, detailed cryptocurrency trade, crypto news. Moreover it allows you to easily see blockchain cryptocurrency prices and price changes, coin market cap and 24h volume charts, coin details and advanced infomation.</string>
    <string name="des_App">Pis Trader is a Crypto Signal app for Bitcoin and Altcoin. It gives you access to cryptocurrency rates, coin market cap, detailed cryptocurrency trade, crypto news. Moreover it allows you to easily see blockchain cryptocurrency prices and price changes, coin market cap and 24h volume charts, coin details and advanced infomation.</string>
    <string name="version_Vn">Version</string>
    <string name="version">Version</string>
    <string name="connect_Vn">Connect with us</string>
    <string name="connect">Connect with us</string>
    <string name="faq_Vn">FAQ</string>
    <string name="faq">FAQ</string>
    <string name="donate_Vn">Donate</string>
    <string name="donate">Donate</string>
    <string name="share_Vn">Share this app</string>
    <string name="share">Share this app</string>
    <string name="privacy_vn">Privacy Policy</string>
    <string name="privacy">Privacy Policy</string>
    <string name="Changelog_Vn">Change log</string>
    <string name="Changelog">Change log</string>
    <string name="term_vn">Term vs Conditions</string>
    <string name="term">Term vs Conditions</string>
    <string name="copyright_Vn">Copyright 2018 by TDev</string>
    <string name="copyright">Copyright 2018 by TDev</string>
    <string name="tele">Join us on Telegram: <a href="https://t.me/joinchat/HX6H_k2HnC6LHLCEU0hptw"><b>PIS TRADER</b></a></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Pis Trader</string>
    <string name="nav_header_subtitle">anonymous@pistrader.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_dynamic_pisfeature">PIS Trader</string>
    <string-array name="drawer_drop_down">
        <item>Time</item>
        <item>Coin</item>
        <item>Gain</item>
        <item>Default</item>
        <item>Other</item>
    </string-array>

</resources>
