<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.traderpro.thanhvt.ScrollingActivity">
    <item
        android:id="@+id/action_key"
        android:orderInCategory="100"
        android:title="@string/trade_api"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_active"
        android:orderInCategory="100"
        android:title="@string/active_traderpro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/report_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
